# channelbot

./: .env  .gitignore  Dockerfile  README.md  bot.py  makefile  pyproject.toml  requirements.txt
.github/workflows/: publish-and-deploy.yaml  update-discord-messages.yaml
messages/: pronouns.xml  protectedgroups.xml  readme.xml  year.xml
