[tool.poetry]
name = "channelbot"
version = "0.1.0"
description = ""
authors = ["CompSoc <hello@comp-soc.com>"]

[tool.poetry.dependencies]
python = "^3.11"
py-cord = "2.6.1"
requests = "^2.32.3"
python-whois = "0.9.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
